Bug 166033: Type ahead find messed up menu keyboard navigation. r=caillon, sr=bzbarsky. Bug 165665: Type ahead find not working when new doc loaded in window, r=caillon, sr=bzbarsky. Bug 166340: Type ahead find in full text search mode wouldn't find certain characters. r=akkana, sr=bzbarsky. These fixes also contain some perf improvements for type ahead find.